Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Adding default profile and export/import using GenericSetup
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Use zope interfaces