@@ -18,9 +18,11 @@
 """CPSRelation XML Adapters.
 """
 
+from zope.app import zapi
 from zope.component import adapts
 from zope.interface import implements
 
+import Products
 from Products.CMFCore.utils import getToolByName
 from Products.GenericSetup.utils import exportObjects
 from Products.GenericSetup.utils import importObjects
@@ -28,6 +30,7 @@ from Products.GenericSetup.utils import XMLAdapterBase
 from Products.GenericSetup.utils import ObjectManagerHelpers
 from Products.GenericSetup.utils import PropertyManagerHelpers
 
+from Products.GenericSetup.interfaces import INode
 from Products.GenericSetup.interfaces import IBody
 from Products.GenericSetup.interfaces import ISetupEnviron
 
@@ -94,10 +97,8 @@ class RelationToolXMLAdapter(XMLAdapterBase, ObjectManagerHelpers):
         self._initObjects(node)
         self._logger.info("Relation tool imported.")
 
-# XXX need to create relations for IOBTree graphs when importing... (relations
-# are somehow exported (?))
-class GraphXMLAdapter(XMLAdapterBase, PropertyManagerHelpers,
-                      ObjectManagerHelpers):
+
+class GraphXMLAdapter(XMLAdapterBase, PropertyManagerHelpers):
     """XML importer and exporter for a graph.
     """
     adapts(IGraph, ISetupEnviron)
@@ -110,6 +111,7 @@ class GraphXMLAdapter(XMLAdapterBase, PropertyManagerHelpers,
         """
         node = self._getObjectNode('object')
         node.appendChild(self._extractProperties())
+        node.appendChild(self._extractRelations())
         self._logger.info("%s graph exported." % self.context.getId())
         return node
 
@@ -118,8 +120,46 @@ class GraphXMLAdapter(XMLAdapterBase, PropertyManagerHelpers,
         """
         if self.environ.shouldPurge():
             self._purgeProperties()
+            self._purgeRelations()
         self._initProperties(node)
+        self._initRelations(node)
         self._logger.info("%s graph imported." % self.context.getId())
+
+    # XXX methods to be used only for IOBTree graphs
+
+    def _extractRelations(self):
+        graph = self.context
+        fragment = self._doc.createDocumentFragment()
+        relations = graph.objectValues()
+        for relation in relations:
+            exporter = zapi.queryMultiAdapter((relation, self.environ), INode)
+            if not exporter:
+                raise ValueError("Relation %s cannot be adapted to INode" % relation)
+            child = exporter.node
+            fragment.appendChild(child)
+        return fragment
+
+    def _purgeRelations(self):
+        graph = self.context
+        for id in list(graph.objectIds()):
+            graph._delObject(id)
+
+    def _initRelations(self, node):
+        graph = self.context
+        for child in node.childNodes:
+            if child.nodeName != 'relation':
+                continue
+            relation_id = str(child.getAttribute('name'))
+            if relation_id not in graph.listRelationIds():
+                relation = graph.addRelation(relation_id)
+            else:
+                relation = graph._getRelation(relation_id)
+
+            importer = zapi.queryMultiAdapter((relation, self.environ), INode)
+            if not importer:
+                raise ValueError("Relation %s cannot be adapted to INode" % relation)
+
+            importer.node = child # calls _importNode
 
 
 class RelationXMLAdapter(XMLAdapterBase, PropertyManagerHelpers):
@@ -133,7 +173,9 @@ class RelationXMLAdapter(XMLAdapterBase, PropertyManagerHelpers):
     def _exportNode(self):
         """Export the object as a DOM node.
         """
-        node = self._getObjectNode('object')
+        node = self._getObjectNode('relation')
+        name = self.context.getId()
+        node.setAttribute('name', name)
         node.appendChild(self._extractProperties())
         self._logger.info("%s relation exported." % self.context.getId())
         return node
@@ -145,6 +187,21 @@ class RelationXMLAdapter(XMLAdapterBase, PropertyManagerHelpers):
             self._purgeProperties()
         self._initProperties(node)
         self._logger.info("%s relation imported." % self.context.getId())
+
+    node = property(_exportNode, _importNode)
+
+    def _exportBody(self):
+        """Export the object as a file body.
+        """
+        # We don't want file body export, just nodes.
+        return None
+
+    def _importBody(self, node):
+        """Import the object from the file body.
+        """
+        return
+
+    body = property(_exportBody, _importBody)
 
 
 # object serializer
