@@ -1,5 +1,0 @@
-<?xml version="1.0"?>
-<object name="hasPart" meta_type="IOBTree Relation">
- <property name="title">has part</property>
- <property name="inverse_id">isPartOf</property>
-</object>
