@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <import-steps>
- <import-step id="toolset" version="20040630-01"
-              handler="Products.GenericSetup.tool.importToolset"
-              title="Required tools">
-  Create required tools, replacing any of the wrong class, and remove
-  forbidden ones.
- </import-step>
  <import-step id="relation" version="20060213-01"
               handler="Products.CPSRelation.exportimport.importRelationTool"
               title="Relation Tool">
   <dependency step="toolset"/>
   Import relation tool and relation graphs.
+ </import-step>
+ <import-step id="toolset" version="20040630-01"
+              handler="Products.GenericSetup.tool.importToolset"
+              title="Required tools">
+  Create required tools, replacing any of the wrong class, and remove
+  forbidden ones.
  </import-step>
 </import-steps>
