@@ -10,3 +10,4 @@ Bug fixes:
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Use zope interfaces
+- Use lines for bindings settings in ZMI
